--- a/pages/main.html
+++ b/pages/main.html
@@ -15,6 +15,8 @@
   </style>
 </head>
 <body>
+  <div id="menu-bar"></div>
+  
   <div class="container">
     <h1 class="mt-4 mb-4">使用教學</h1>
 
@@ -136,6 +138,15 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    // JavaScript to dynamically load menu bar
+    fetch('menu.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('menu-bar').innerHTML = data;
+      })
+      .catch(error => console.error('Error loading menu:', error));
+  </script>
 </body>
 </html>
 
