Fix: loading speed

--- a/pages/planner.html
+++ b/pages/planner.html
@@ -130,6 +130,15 @@
   </div>
 
   <!-- 引入腳本 -->
+  <script>
+    // JavaScript to dynamically load menu bar
+    fetch('menu.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('menu-bar').innerHTML = data;
+      })
+      .catch(error => console.error('Error loading menu:', error));
+  </script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -139,6 +148,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.14/jspdf.plugin.autotable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vxe-table-plugin-export-pdf/fonts/source-han-sans-normal.js"></script>
+
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const { jsPDF } = window.jspdf;
@@ -376,14 +386,6 @@
 
       // 绑定点击事件
       document.getElementById('downloadPdfBtn').addEventListener('click', downloadPdf);
-
-      // 动态加载菜单栏
-      fetch('menu.html')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('menu-bar').innerHTML = data;
-        })
-        .catch(error => console.error('Error loading menu:', error));
     });
 
     // 动态绑定 dragstart 事件
