Fix: fetch problem

--- a/pages/add-course.html
+++ b/pages/add-course.html
@@ -129,7 +129,7 @@
             topic,
             content,
             duration,
-            presenters
+            presenter
           }, null, 2); // Pretty print JSON
           
           // Alert and redirect
