--- a/pages/add-course.html
+++ b/pages/add-course.html
@@ -101,13 +101,13 @@
       const topic = document.getElementById('topic').value;
       const content = document.getElementById('content').value;
       const duration = document.getElementById('duration').value;
-      const presenters = Array.from(document.querySelectorAll('#presenterList input:checked')).map(input => input.value);
+      const presenter = Array.from(document.querySelectorAll('#presenterList input:checked')).map(input => input.value);
   
       // Fetch current courses and add new course
       fetch('../database/courses.json')
         .then(response => response.json())
         .then(data => {
-          const newCourse = { title, topic, content, duration, presenters };
+          const newCourse = { title, topic, content, duration, presenter };
           data.push(newCourse); // Add new course
           return fetch('/update-courses', { // Endpoint to update courses.json
             method: 'POST',
