--- a/pages/planner.html
+++ b/pages/planner.html
@@ -14,24 +14,23 @@
     .content-main {
       flex: 1;
       padding-right: 10px;
-      /* 为了保持两边均匀，去掉固定的右边间距 */
       max-width: 50%;
     }
     .content-sidebar {
       width: 50%;
       max-width: 50%;
-      position: sticky; /* 设置粘性定位 */
-      top: 20px; /* 与页面顶部的距离 */
-      max-height: calc(100vh - 40px); /* 保持侧边栏在视图内 */
-      overflow-y: auto; /* 允许滚动 */
-      padding-left: 10px; /* 内边距 */
-      background-color: #f8f9fa; /* 背景颜色 */
-      border-left: 1px solid #ddd; /* 分隔线 */
-      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1); /* 阴影效果 */
-      display: none; /* 初始时隐藏 */
+      position: sticky;
+      top: 20px;
+      max-height: calc(100vh - 40px);
+      overflow-y: auto;
+      padding-left: 10px;
+      background-color: #f8f9fa;
+      border-left: 1px solid #ddd;
+      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+      display: none;
     }
     .content-sidebar.active {
-      display: block; /* 激活时显示 */
+      display: block;
     }
     .day { margin: 10px 0; font-size: 18px; }
     .json-content { margin-top: 10px; border: 1px solid #ddd; padding: 10px; background-color: #f9f9f9; }
@@ -96,42 +95,42 @@
   <div class="container mt-4">
     <h1>Planner</h1>
 
-    <!-- 選擇部分 -->
+    <!-- Selection Section -->
     <div class="selection-section">
-      <!-- 日期選擇器 -->
+      <!-- Date Picker -->
       <div class="form-group">
-        <label for="datepicker">選擇日期:</label>
-        <input type="text" id="datepicker" class="form-control" placeholder="選擇日期範圍">
-        <button id="generateScheduleBtn" class="btn btn-primary mt-2">生成日程表</button>
+        <label for="datepicker">Select Date:</label>
+        <input type="text" id="datepicker" class="form-control" placeholder="Select date range">
+        <button id="generateScheduleBtn" class="btn btn-primary mt-2">Generate Schedule</button>
       </div>
-      <!-- 標題選擇器 -->
+      <!-- Title Selector -->
       <div class="form-group">
-        <label for="titleSelect">選擇標題:</label>
+        <label for="titleSelect">Select Title:</label>
         <select id="titleSelect" class="form-control">
-          <option value="">選擇標題</option>
+          <option value="">Select Title</option>
         </select>
       </div>
     </div>
 
     <div class="content">
       <div class="content-main">
-        <!-- 容納日程表 -->
+        <!-- Schedule Container -->
         <div id="schedule-container">
           <!-- Schedule will be populated by JavaScript -->
         </div>
-        <button id="downloadPdfBtn" class="btn btn-success download-btn">下載 PDF</button>
+        <button id="downloadPdfBtn" class="btn btn-success download-btn">Download PDF</button>
       </div>
 
-      <!-- 右側課程詳細信息 -->
+      <!-- Course Details Sidebar -->
       <div class="content-sidebar" id="courseDetailsContainer">
         <div id="courseDetails"></div>
       </div>
     </div>
   </div>
 
-  <!-- 引入腳本 -->
+  <!-- Scripts -->
   <script>
-    // JavaScript to dynamically load menu bar
+    // Load menu bar dynamically
     fetch('menu.html')
       .then(response => response.text())
       .then(data => {
@@ -153,14 +152,15 @@
     document.addEventListener('DOMContentLoaded', () => {
       const { jsPDF } = window.jspdf;
 
-      // PDF 下載功能
-      function downloadPdf() {
-        const pdf = new jsPDF('p', 'pt', 'a4');
-        pdf.addFont('SourceHanSans-Normal.ttf', 'SourceHanSans-Normal', 'normal');
-        pdf.setFont('SourceHanSans-Normal');
+      // PDF Download Function
+      async function downloadPdf() {
+        const filename = prompt('Enter file name:', 'schedule');
+        if (!filename) return;
+
+        let existingContent = JSON.parse(localStorage.getItem(filename) || '[]');
 
         const tables = document.querySelectorAll('#schedule-container .day');
-        tables.forEach((dayElement, index) => {
+        tables.forEach((dayElement) => {
           const day = dayElement.querySelector('.day-info').innerText;
           const tableTitle = dayElement.querySelector('.table-title-input').value;
           const table = dayElement.querySelector('.json-content table');
@@ -170,39 +170,35 @@
             });
             const header = rows.shift();
 
-            pdf.addPage();
-            pdf.autoTable({
-              head: [header],
-              body: rows,
-              startY: 60,
-              didDrawPage: function (data) {
-                pdf.setFont('SourceHanSans-Normal', 'normal');
-                pdf.setFontSize(12);
-                // 在表格上方添加標題和日期信息
-                if (tableTitle) {
-                  pdf.text(`${day} - ${tableTitle}`, 20, 50);
-                } else {
-                  pdf.text(day, 20, 50);
-                }
-              },
-              styles: {
-                font: 'SourceHanSans-Normal',
-                fontStyle: 'normal'
-              }
-            });
+            existingContent.push({ day, tableTitle, header, rows });
           }
         });
-        if (pdf.getNumberOfPages() > 1) {
-          pdf.deletePage(1);
-        }
 
-        const filename = prompt('請輸入文件名稱:', 'schedule');
-        if (filename) {
-          pdf.save(`${filename}.pdf`);
-        }
+        localStorage.setItem(filename, JSON.stringify(existingContent));
+
+        const pdf = new jsPDF('p', 'pt', 'a4');
+        pdf.addFont('SourceHanSans-Normal.ttf', 'SourceHanSans-Normal', 'normal');
+        pdf.setFont('SourceHanSans-Normal');
+
+        existingContent.forEach((content, index) => {
+          if (index > 0) pdf.addPage();
+          pdf.autoTable({
+            head: [content.header],
+            body: content.rows,
+            startY: 60,
+            didDrawPage: function () {
+              pdf.setFont('SourceHanSans-Normal', 'normal');
+              pdf.setFontSize(12);
+              pdf.text(content.tableTitle ? `${content.day} - ${content.tableTitle}` : content.day, 20, 50);
+            },
+            styles: { font: 'SourceHanSans-Normal', fontStyle: 'normal' }
+          });
+        });
+
+        pdf.save(`${filename}.pdf`);
       }
 
-      // 日期選擇器設置
+      // Date Picker Settings
       $('#datepicker').datepicker({
         format: 'yyyy-mm-dd',
         language: 'zh-TW',
@@ -211,7 +207,7 @@
         todayHighlight: true
       });
 
-      // 生成日程表
+      // Generate Schedule
       document.getElementById('generateScheduleBtn').addEventListener('click', function() {
         const selectedDates = $('#datepicker').datepicker('getDates').map(formatDate).sort();
         const scheduleContainer = document.getElementById('schedule-container');
@@ -221,8 +217,9 @@
           const dayElement = document.createElement('div');
           dayElement.classList.add('day');
           dayElement.innerHTML = `
-            <div class="day-info">Day ${index + 1}: ${date}</div>
-            <input type="text" class="form-control table-title-input" placeholder="輸入標題">
+            <!-- <div class="day-info">Day ${index + 1}: ${date}</div> -->
+            <div class="day-info">${date}</div>
+            <input type="text" class="form-control table-title-input" placeholder="Enter title">
             <div class="json-content">
               <table>
                 <thead>
@@ -245,18 +242,24 @@
                 </tbody>
               </table>
             </div>
+            <button class="btn btn-danger clear-btn">Clear Schedule</button>
           `;
           scheduleContainer.appendChild(dayElement);
         });
 
-        // 将表格行中的所有dropzone设置为可拖放
+        // Set dropzones to be draggable
         document.querySelectorAll('.dropzone').forEach(dropzone => {
           dropzone.addEventListener('dragover', allowDrop);
           dropzone.addEventListener('drop', drop);
         });
+
+        // Add event listener to clear buttons
+        document.querySelectorAll('.clear-btn').forEach(btn => {
+          btn.addEventListener('click', clearSchedule);
+        });
       });
 
-      // 加载标题
+      // Load Titles
       fetch('../database/titles.json')
         .then(response => response.json())
         .then(titles => {
@@ -270,7 +273,7 @@
         })
         .catch(error => console.error('Error fetching titles:', error));
 
-      // 显示课程详细信息
+      // Display Course Details
       document.getElementById('titleSelect').addEventListener('change', function() {
         const selectedTitle = this.value;
         const courseDetailsContainer = document.getElementById('courseDetailsContainer');
@@ -297,8 +300,6 @@
                     <p><strong>Presenters:</strong> ${course.presenter.join(', ')}</p>
                   `;
                   courseDetails.appendChild(courseElement);
-                  
-                  // 添加分隔线条
                   const divider = document.createElement('hr');
                   divider.classList.add('course-divider');
                   courseDetails.appendChild(divider);
@@ -313,35 +314,36 @@
         }
       });
 
-      // 格式化日期
+      // Format date
       function formatDate(date) {
         const d = new Date(date);
-        const month = '' + (d.getMonth() + 1);
-        const day = '' + d.getDate();
+        const month = String(d.getMonth() + 1).padStart(2, '0');
+        const day = String(d.getDate()).padStart(2, '0');
         const year = d.getFullYear();
-
-        return [year, (month.length < 2 ? '0' : '') + month, (day.length < 2 ? '0' : '') + day].join('-');
+        return [year, month, day].join('-');
       }
 
-      // 拖放功能
+      // Allow drop function
       function allowDrop(event) {
         event.preventDefault();
       }
 
+      // Drag function
       function drag(event) {
         event.dataTransfer.setData("text", event.target.dataset.course);
       }
 
+      // Drop function
       function drop(event) {
         event.preventDefault();
         const courseData = event.dataTransfer.getData("text");
         if (courseData) {
           const course = JSON.parse(courseData);
           const dropzone = event.target.closest('.dropzone');
-          if (!dropzone) return; // 若未找到 dropzone 直接返回
+          if (!dropzone) return;
 
           const fromTimeInput = dropzone.querySelector('td input');
-          if (!fromTimeInput) return; // 若未找到 input 直接返回
+          if (!fromTimeInput) return;
 
           const fromTime = fromTimeInput.value;
           const fromTimeMinutes = convertTimeToMinutes(fromTime);
@@ -356,7 +358,6 @@
             <td>${course.presenter.join(', ')}</td>
           `;
 
-          // 增加一个新的 dropzone
           const newDropzone = document.createElement('tr');
           newDropzone.classList.add('dropzone');
           newDropzone.innerHTML = `
@@ -372,30 +373,51 @@
         }
       }
 
-      // 时间转换函数
+      // Convert time to minutes
       function convertTimeToMinutes(time) {
         const [hours, minutes] = time.split(':').map(Number);
         return hours * 60 + minutes;
       }
 
+      // Convert minutes to time
       function convertMinutesToTime(minutes) {
         const hours = Math.floor(minutes / 60);
         const mins = minutes % 60;
         return `${String(hours).padStart(2, '0')}:${String(mins).padStart(2, '0')}`;
       }
 
-      // 绑定点击事件
+      // Clear schedule
+      function clearSchedule(event) {
+        const dayElement = event.target.closest('.day');
+        const tableBody = dayElement.querySelector('table tbody');
+        tableBody.innerHTML = `
+          <tr class="dropzone">
+            <td>
+              <input type="text" value="09:00" class="form-control" title="From Time" placeholder="HH:MM" onkeypress="setTime(event)">
+            </td>
+            <td></td>
+            <td colspan="3"></td>
+          </tr>
+        `;
+
+        document.querySelectorAll('.dropzone').forEach(dropzone => {
+          dropzone.addEventListener('dragover', allowDrop);
+          dropzone.addEventListener('drop', drop);
+        });
+      }
+
+      // Bind click event to download button
       document.getElementById('downloadPdfBtn').addEventListener('click', downloadPdf);
     });
 
-    // 动态绑定 dragstart 事件
+    // Bind dragstart event dynamically
     document.addEventListener('dragstart', function(event) {
       if (event.target.classList.contains('draggable')) {
         event.dataTransfer.setData("text", event.target.dataset.course);
       }
     });
 
-    // 动态处理 setTime 事件
+    // Handle setTime event dynamically
     window.setTime = function(event) {
       if (event.key === 'Enter') {
         event.preventDefault();
